fix: tweak spacing to match design spec

--- a/src/components/sidebar/components/sidebar-headings/sidebar-headings.module.css
+++ b/src/components/sidebar/components/sidebar-headings/sidebar-headings.module.css
@@ -4,7 +4,7 @@
 	font-weight: var(--token-typography-font-weight-semibold);
 	line-height: var(--token-typography-display-100-line-height);
 	margin-bottom: 12px;
-	margin-top: 20px;
+	margin-top: 16px;
 	padding-left: 8px;
 	padding-right: 8px;
 }
